# hyperbolic-riemannian-engine

./: .gitignore  CMakeLists.txt  README.md
include/engine/: trajectory_store.hpp
src/: main.cpp
src/engine/: trajectory_store.cpp
tests/: CMakeLists.txt  test_main.cpp  test_math.cpp  test_trajectory_store.cpp
